# ession

./: .gitignore  README.md  TODO.md  pyproject.toml
.windsurf/rules/: workspace.md
ession/: __init__.py  audio.py  note.py  oscillator.py  pitch.py  sequence.py
ession/generators/: __init__.py  automata.py  chaos.py  markov.py  stochastic.py
scripts/: chop_audio.py  example_1.py  extract_dynamic_samples.py  generate_from_sample.py  test_generators.py  test_imports.py
